# Capstone

./: .gitignore  bun.lockb  package.json  prettier.config.js  tsconfig.json  vite.config.ts
papers/outputs/: agents_rubric.pdf.md  calc_1.pdf.md  example.md
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  file_system.rs  lib.rs  lite.rs  models.rs  piece_table.rs
src-tauri/src/commands/: components.rs  debug.rs  file_system.rs  files.rs  library.rs  mod.rs
src-tauri/src/components/: error.rs  library.rs
src-tauri/src/diagnostics/: debug.rs  error.rs  mod.rs
src/_debug/: FileFetch.tsx  Panel.tsx
src/api/: debug.document.ts  document.ts  types.ts
src/components/: Editor.tsx  FileDrop.tsx  Library.tsx  file_input.ts  file_input.tsx  formatter.ts
src/editor/: BlockRenderer.tsx  Debug.tsx  Editor.tsx  PieceTable.ts  _Editor.tsx  buffer.ts  debug.tsx  piece_table.ts  render.ts  types.ts
src/editor/handler/: caret.ts  deleteContentBackward.ts  deleteContentForward.ts  handler.ts  insertFromPaste.ts  insertParagraph.ts  insertText.ts  operations.ts  selection.ts  types.ts
src/editor/parser/: parse.ts
src/editor/parser/rules/: break.ts  heading.ts  list.ts  paragraph.ts
src/pages/: Home.tsx  View.tsx
src/ui/toast/: ToastContainer.tsx  ToastContext.tsx  ToastProvider.tsx
