[package]
name = "app"
version = "1.0.0"
description = "A Tauri Solid TypeScript Tailwind Vite App Template"
authors = ["Anthony"]
repository = "https://github.com/Chimbay/Capstone"
default-run = "app"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name unique and wouldn't conflict with the bin name. This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# --- External --- #
lopdf = "0.38.0"
tauri-plugin-log = "2.7.0"

# --- Framework files ---- #
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-devtools = "2.0.1"

[features]
# --- Framework files ---- #
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
# Compile your binary in smaller steps.
incremental = true

[profile.release]
# Automatically strip symbols from the binary
strip = true
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1
# Enables link to optimizations
lto = true
# Optimize for binary size. Use `3` if you prefer speed.
opt-level = "s"
